WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
46552
[chromium] Fix clang warning/error.
https://bugs.webkit.org/show_bug.cgi?id=46552
Summary
[chromium] Fix clang warning/error.
Nico Weber
Reported
2010-09-24 22:41:21 PDT
[chromium] Fix clang warning/error.
Attachments
patch
(1.21 KB, patch)
2010-09-24 23:04 PDT
,
Nico Weber
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Nico Weber
Comment 1
2010-09-24 23:04:33 PDT
Created
attachment 68809
[details]
patch
WebKit Commit Bot
Comment 2
2010-09-25 04:24:34 PDT
Comment on
attachment 68809
[details]
patch Rejecting patch 68809 from commit-queue. Failed to run "['./WebKitTools/Scripts/webkit-patch', '--status-host=queues.webkit.org', 'build-and-test', '--no-clean', '--no-update', '--test', '--quiet', '--non-interactive']" exit_code: 2 Last 500 characters of output: Tests Testing 21367 test cases. http/tests/appcache/progress-counter.html -> timed out Sampling process 95665 for 10 seconds with 10 milliseconds of run time between samples Sampling completed, processing symbols... Sample analysis of process 95665 written to file /Users/eseidel/Library/Logs/DumpRenderTree/HangReport.txt Exiting early after 1 failures. 20404 tests run. 431.18s total testing time 20403 test cases (99%) succeeded 1 test case (<1%) timed out 31 test cases (<1%) had stderr output Full output:
http://queues.webkit.org/results/4002149
Mihai Parparita
Comment 3
2010-09-25 09:48:32 PDT
Comment on
attachment 68809
[details]
patch flaky_tests--
Adam Barth
Comment 4
2010-09-25 10:01:26 PDT
Comment on
attachment 68809
[details]
patch Clearing flags on attachment: 68809 Committed
r68333
: <
http://trac.webkit.org/changeset/68333
>
Adam Barth
Comment 5
2010-09-25 10:01:30 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug