2010-09-25  Nicolas Weber  <thakis@chromium.org>

Reviewed by James Robinson.

        [chromium] Fix clang warning/error.
        https://bugs.webkit.org/show_bug.cgi?id=46552

        * src/WorkerFileSystemCallbacksBridge.h:


Canonical link: https://commits.webkit.org/59023@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@68333 268f45cc-cd09-0410-ab3c-d52691b4dbfc